did advanced with theos help

--- a/advanced/index.html
+++ b/advanced/index.html
@@ -17,9 +17,11 @@
   <title>Exercise Basic</title>
 </head>
 <body class="container">
-  <div class="row row-cols-2 g-4" id="printBooks"></div>
-
+  <div class="row row-cols-2 g-4" id="printBooks">
+    
   </div>
+
+  
 
   
 
