--- a/advanced/index.html
+++ b/advanced/index.html
@@ -16,16 +16,10 @@
 
   <title>Exercise Basic</title>
 </head>
-<body class="container">
-  <div class="row row-cols-2 g-4" id="printBooks">
-    
+<body class="container mt-5 mb-5">
+  <div class="row row-cols-2 g-5" id="printBooks">
+    <!-- here the js dynamic code will be inserted -->
   </div>
-
-  
-
-  
-
-  
 
   <!-- accessing data from JSON file -->
   <script src="data.json"></script>
