--- a/advanced/index.html
+++ b/advanced/index.html
@@ -14,7 +14,7 @@
 
    </style>
 
-  <title>Exercise Basic</title>
+  <title>Exercise Advanced</title>
 </head>
 <body class="container mt-5 mb-5">
   <div class="row row-cols-2 g-5" id="printBooks">
